# usbmon-tools

./: .dir-locals.el  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: pypi.yml  pytest.yml  python.yml
testdata/: usbpcap1.pcap.license
tests/: __init__.py  test_capture_session.py  test_capture_usbmon_mmap.py  test_capture_usbpcap.py  test_chatter.py  test_descriptors.py  test_pcapng.py  test_setup.py  test_structs.py
tests/testdata/: usbpcap1.pcap
tools/: extract-cp2110-chatter.py  extract-hid-chatter.py  pcapng-extract-base64.py  pcapng2text.py  usbmon-capture-stats.py
usbmon/: addresses.py  capture_session.py  chatter.py  constants.py  descriptors.py  packet.py  pcapng.py  setup.py  structs.py
usbmon/capture/: usbmon_mmap.py  usbpcap.py
usbmon/capture/tests/: test_usbmon_mmap.py  test_usbpcap.py
usbmon/linux/: __init__.pyi  linux.pyx
usbmon/support/: cp210x.py  cp2110.py  extractors.py  hid.py
usbmon/tests/: test_addresses.py  test_capture_session.py  test_chatter.py  test_descriptors.py  test_pcapng.py  test_setup.py
usbmon/tools/: __init__.py  _utils.py  capture_stats.py  chatter_cp210x.py  chatter_cp2110.py  chatter_hid.py  monitor.py  pcapng2base64.py  pcapng2text.py
