# SPDX-FileCopyrightText: © 2019 The usbmon-tools Authors
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = usbmon-tools
description = usbmon processing utilities (for Linux and Windows captures).
long_description = file:README.md
long_description_content_type = text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Apache 2.0
license_files =
   AUTHORS
   CONTRIBUTING.md
   LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Topic :: System :: Hardware

[options]
python_requires = ~= 3.7
install_requires =
    construct>=2.9
    hexdump
    python-pcapng>=1.0
packages = find:

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    absl-py
    mypy
    pre-commit
    pytest-flake8
    pytest-mypy
    pytest-timeout>=1.3.0
    pytest>=3.6.0
    setuptools_scm

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[tool:pytest]
addopts =
	--color=yes
	--ignore=setup.py
	-r a
norecursedirs =
	      .git
	      dist
	      build
	      venv*
	      .env
timeout = 120

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
