# SPDX-FileCopyrightText: © 2019 The usbmon-tools Authors
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = usbmon-tools
description = usbmon processing utilities (for Linux and Windows captures).
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Apache-2.0
license_file = LICENSE
license_files =
    AUTHORS
    CONTRIBUTING.md
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Hardware

[options]
packages = find:
install_requires =
    construct>=2.9
    hexdump
    python-pcapng>=1.0
python_requires = ~= 3.7

[options.extras_require]
dev =
    absl-py
    mypy
    pre-commit
    pytest>=3.6.0
    pytest-flake8
    pytest-mypy
    pytest-timeout>=1.3.0
    setuptools_scm

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    usbmon-capture_stats = usbmon.tools.capture_stats:main
    usbmon-chatter_cp2110 = usbmon.tools.chatter_cp2110:main
    usbmon-chatter_hid = usbmon.tools.chatter_hid:main
    usbmon_pcapng2base64 = usbmon.tools.pcapng2base64:main
    usbmon-pcapng2text = usbmon.tools.pcapng2text:main

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[tool:pytest]
addopts =
    --color=yes
    --ignore=setup.py
    -r a
norecursedirs =
    .git
    dist
    build
    venv*
    .env
timeout = 120

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
